--- a/Shmuelie.FreeRangeWindows.csproj
+++ b/Shmuelie.FreeRangeWindows.csproj
@@ -1,35 +1,54 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
     <Company>Shmueli Englard</Company>
     <Product>Free Range Windows</Product>
     <Description>Free your tool windows! Windows will now be independent of each other!</Description>
     <Title>Shmuelie.FreeRangeWindows</Title>
-    <Version>1.2.0</Version>
+    <Version>1.3.0</Version>
     <ApplicationIcon>Resources\FreeRangeWindowsPackage.ico</ApplicationIcon>
-    <GeneratePkgDefFile>true</GeneratePkgDefFile>
+    <OutputType>Library</OutputType>
+    <VsixType>v3</VsixType>
+    <SchemaVersion>2.0</SchemaVersion>
+    <MinimumVisualStudioVersion>15.0</MinimumVisualStudioVersion>
+    <OutputPath Condition="'$(OutputPath)' == ''">bin\$(Configuration)\</OutputPath>
+    <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <ProjectGuid>{B2FBE1BC-7A7E-4542-AB9E-2FC0D815A27A}</ProjectGuid>
+    <DeployExtension>false</DeployExtension>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
     <IncludeDebugSymbolsInVSIXContainer>true</IncludeDebugSymbolsInVSIXContainer>
     <IncludeDebugSymbolsInLocalVSIXDeployment>true</IncludeDebugSymbolsInLocalVSIXDeployment>
     <CopyBuildOutputToOutputDirectory>true</CopyBuildOutputToOutputDirectory>
-    <CopyOutputSymbolsToOutputDirectory>false</CopyOutputSymbolsToOutputDirectory>
-    <OutputType>Library</OutputType>
-    <VsixType>v3</VsixType>
-    <StartAction>Program</StartAction>
-    <StartPrograms>$(DevEnvDir)devenv.exe</StartPrograms>
-    <StartArguments>/rootsuffix Exp</StartArguments>
-    <CreatePkgDefAssemblyToProcess>$(TargetPath)</CreatePkgDefAssemblyToProcess>
-    <OutputPath Condition="'$(OutputPath)' == ''">bin\$(Configuration)\</OutputPath>
+    <CopyOutputSymbolsToOutputDirectory>true</CopyOutputSymbolsToOutputDirectory>
+    <GeneratePkgDefFile>true</GeneratePkgDefFile>
+    <CreateVsixContainer>True</CreateVsixContainer>
+    <UpdateAssemblyInfo>false</UpdateAssemblyInfo>
+    <IsPackage>true</IsPackage>
+    <UseCodebase>true</UseCodebase>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/SamuelEnglard/Shmuelie.FreeRangeWindows</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/SamuelEnglard/Shmuelie.FreeRangeWindows</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>Windows, Tools</PackageTags>
+    <PackageIconUrl>https://raw.githubusercontent.com/SamuelEnglard/Shmuelie.FreeRangeWindows/master/Resources/FreeRangeWindowsPackage256.png</PackageIconUrl>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
+    <DeployExtension>True</DeployExtension>
+    <CreateVsixContainer>True</CreateVsixContainer>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>DEBUG</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK.EmbedInteropTypes" Version="15.0.27" />
-    <PackageReference Include="Microsoft.VisualStudio.Shell.15.0" Version="16.0.28729" />
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.1.1079">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Shell.15.0" Version="16.1.28917.181" />
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.1.3128" />
+    <PackageReference Include="Microsoft.VisualStudio.SDK.VsixSuppression" Version="14.1.37" />
   </ItemGroup>
 
   <ItemGroup>
@@ -73,5 +92,20 @@
   </ItemGroup>
 
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
+  <Target Name="AddToVisxSources" AfterTargets="GetVsixSourceItems">
+    <ItemGroup>
+      <VSIXSourceItem Include="$(OutputPath)\Nerdbank.Streams.dll" />
+      <VSIXSourceItem Include="$(OutputPath)\Newtonsoft.Json.dll" />
+      <VSIXSourceItem Include="$(OutputPath)\Shmuelie.FreeRangeWindows.dll" />
+      <VSIXSourceItem Include="$(OutputPath)\StreamJsonRpc.dll" />
+      <VSIXSourceItem Include="$(OutputPath)\System.Buffers.dll" />
+      <VSIXSourceItem Include="$(OutputPath)\System.IO.Pipelines.dll" />
+      <VSIXSourceItem Include="$(OutputPath)\System.Memory.dll" />
+      <VSIXSourceItem Include="$(OutputPath)\System.Numerics.Vectors.dll" />
+      <VSIXSourceItem Include="$(OutputPath)\System.Runtime.CompilerServices.Unsafe.dll" />
+      <VSIXSourceItem Include="$(OutputPath)\System.Threading.Tasks.Extensions.dll" />
+      <VSIXSourceItem Include="$(OutputPath)\System.ValueTuple.dll" />
+    </ItemGroup>
+  </Target>
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
 </Project>
