--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,7 @@ install:
 before_build:
   - ps: Vsix-IncrementVsixVersion | Vsix-UpdateBuildVersion
 build_script:
-  - dotnet build --configuration=Release /p:DeployExtension=false /p:ZipPackageCompressionLevel=normal /v:m /p:SolutionDir=.\
+  - dotnet restore
+  - msbuild /p:configuration=Release /p:DeployExtension=false /p:ZipPackageCompressionLevel=normal /v:m /p:SolutionDir=.\
 after_test:
   - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
