--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,6 @@ before_build:
   - ps: Vsix-IncrementVsixVersion | Vsix-UpdateBuildVersion
 build_script:
   - dotnet restore
-  - msbuild /p:configuration=Release /p:DeployExtension=false /p:ZipPackageCompressionLevel=normal /v:m /p:SolutionDir=.\
+  - msbuild /p:Configuration=Release /p:DeployExtension=false /p:ZipPackageCompressionLevel=normal /v:m /p:SolutionDir=.\
 after_test:
   - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
